src/objects/Location__c.object
<CustomObject>
    <description>Location Information related to Applications. (KY)</description>
    <fields>
        <fullName>Accessible_for_people_with_disablities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Site Date Information&quot; section.</description>
        <label>Accessible for people with disablities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application3__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beds_Provided__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Beds Provided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNCS_Corporate_Structure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNCS Corporate Structure</label>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNCS_Funds_Requested__c</fullName>
        <label>CNCS Funds Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity_Building__c</fullName>
        <label>Capacity Building</label>
        <picklist>
            <picklistValues>
                <fullName>Effectiveness &amp; Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity Building &amp; Leverage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale/Reach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Accessibility__c</fullName>
        <description>Field should be under &quot;Site Date Information&quot; section.</description>
        <label>Description of Accessibility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Disaster_Services__c</fullName>
        <label>Disaster Services</label>
        <picklist>
            <picklistValues>
                <fullName>Disaster Assistance Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Distance_to_Location_of_Service__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Distance to Location of Service</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economic_Opportunities__c</fullName>
        <label>Economic Opportunities</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Economic Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Literacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Find Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Micro-enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <description>&quot;Focus Area and Objectives&quot; section.</description>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>Teacher Corps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-HS Education Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K-12 Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Readiness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Environmental_Stewardship__c</fullName>
        <label>Environmental Stewardship</label>
        <picklist>
            <picklistValues>
                <fullName>At-Risk Ecosystems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awareness &amp; Stewardship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Jobs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Healthy_Futures__c</fullName>
        <label>Healthy Futures</label>
        <picklist>
            <picklistValues>
                <fullName>Access to Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aging in Place</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_K_12_school__c</fullName>
        <label>Is this a K-12 school?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Kitchen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Kitchen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Laundry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Laundry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Location_Id__c</fullName>
        <label>Legacy Location Id</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_EIN__c</fullName>
        <description>&quot;EIN Information&quot; section.</description>
        <label>Location EIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inclement Weather Site</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodging_Arrival_Date__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Lodging Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lodging_Category__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Lodging Category</label>
        <picklist>
            <picklistValues>
                <fullName>Community or Faith-Based Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian Tribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institute of Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Government or Municipality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Non-Profit Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National or State Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Individual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lodging_Departure_Date__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Lodging Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lodging_Description__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Lodging Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lodging_Type__c</fullName>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Lodging Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment or Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed and Breakfast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Church or Other Faith-Based Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dorm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homestay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Military Facility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCCC Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recreational Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Room or Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vacant Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yurt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NCES_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NCES ID</label>
        <referenceTo>IPEDS__c</referenceTo>
        <relationshipLabel>Locations_Cust</relationshipLabel>
        <relationshipName>Locations_Cust</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NCES_IDs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NCES ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>School Data</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Locations (NCES ID)</relationshipLabel>
        <relationshipName>Locations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NOFO</label>
        <referenceTo>NOFA__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NOFA__c</fullName>
        <formula>Application__r.NOFA_RFP__r.Name</formula>
        <label>NOFO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Unduplicated_Volunteers__c</fullName>
        <description>Field should be under &quot;Volunteer Information&quot; section.</description>
        <label>Number of Unduplicated Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <description>Field should be under &quot;Volunteer Information&quot; section.</description>
        <label>Number of Volunteers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Id__c</fullName>
        <formula>Application__r.Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Org Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Capacity_Building__c</fullName>
        <label>Other Capacity Building</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Disaster_Services__c</fullName>
        <label>Other Disaster Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Economic_Opportunities__c</fullName>
        <label>Other Economic Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Education__c</fullName>
        <label>Other Education</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Environmental_Stewardship__c</fullName>
        <label>Other Environmental Stewardship</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Healthy_Futures__c</fullName>
        <label>Other Healthy Futures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Station_Type__c</fullName>
        <label>Other Station Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Veterans_Military_Families__c</fullName>
        <label>Other Veterans &amp; Military Families</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Projected_End_Date__c</fullName>
        <description>Field should be under &quot;Site Date Information&quot; section.</description>
        <label>Projected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projected_Start_Date__c</fullName>
        <description>Field should be under &quot;Site Date Information&quot; section.</description>
        <label>Projected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refrigerator_Microwave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Refrigerator &amp; Microwave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_City__c</fullName>
        <label>School City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_City_new__c</fullName>
        <formula>NCES_ID__r.CITY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_ID_NCES__c</fullName>
        <label>School ID NCES</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <label>School Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_State__c</fullName>
        <label>School State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_State_new__c</fullName>
        <formula>NCES_ID__r.STABBR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Street_Address_1__c</fullName>
        <label>School Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Street_Address_2__c</fullName>
        <label>School Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Street_Address_new__c</fullName>
        <formula>NCES_ID__r.ADDR_del__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Street Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Zip__c</fullName>
        <label>School Zip</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Zip_new__c</fullName>
        <formula>NCES_ID__r.ZIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shower__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field should be under &quot;Lodging Information&quot; section.</description>
        <label>Shower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Type__c</fullName>
        <description>Field should be under &quot;Site Type and Summer Associates Information&quot; section.</description>
        <label>Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Performance Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Placement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Slots__c</fullName>
        <label>Slots</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Station_Type__c</fullName>
        <description>Field should be under &quot;Site Type&quot; section.</description>
        <label>Station Type</label>
        <picklist>
            <picklistValues>
                <fullName>Adult Correctional Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Juvenile Correctional Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Area Agency on Aging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Before and After School Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chambers of Commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community and Economic Development Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School Day Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developmental Disability Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health Organizations (public and private non-profit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals/Medical Centers/Clinics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environmental Stewardship Organizations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residential Long Term Care/Nursing Homes/Rehabilitation/Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Libraries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Centers/ Adult Day Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Housing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parks/Recreational Agencies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Museums</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Programs (non-residential)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police/Law Enforcement/Courts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post-Secondary institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private School K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public School K-12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teen Pregnancy/Teen Parenting Programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans Hospital/Organizations Serving Veterans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vocational training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faith-based stations/volunteers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transitional shelters/centers (e.g. homeless, abused, other short-term)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Street_Address_1__c</fullName>
        <label>Street Address 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Street_Address_2__c</fullName>
        <label>Street Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summer_Associates__c</fullName>
        <description>Field should be under &quot;Site Type and Summer Associates Information&quot; section.</description>
        <label>Summer Associates</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Email__c</fullName>
        <label>Supervisor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Supervisor_Name__c</fullName>
        <label>Supervisor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Organization__c</fullName>
        <label>Supervisor Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone_Number_Extension__c</fullName>
        <label>Supervisor Phone Number Extension</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supervisor_Phone_Number__c</fullName>
        <label>Supervisor Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Undisclosed_Location__c</fullName>
        <label>Undisclosed Location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veterans_Military_Families__c</fullName>
        <label>Veterans &amp; Military Families</label>
        <picklist>
            <picklistValues>
                <fullName>Access &amp; Attract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterans &amp; Families Served</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (Please specify in text box)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Veterans_Served__c</fullName>
        <description>Field should be under &quot;Volunteer Information&quot; section.</description>
        <label>Veterans Served</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations_Cust</pluralLabel>
    <recordTypes>
        <fullName>Locations</fullName>
        <active>true</active>
        <label>Locations</label>
    </recordTypes>
    <recordTypes>
        <fullName>School_Data</fullName>
        <active>true</active>
        <label>School Data</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Location_Validations</fullName>
        <active>false</active>
        <description>This is no longer required. KY</description>
        <errorConditionFormula>AND((RecordTypeId =&quot;012r00000004JD3&quot;),
OR(
ISPICKVAL(Location_Type__c, &quot;&quot;) ,
Supervisor_Name__c = null,
Supervisor_Email__c = null,
Supervisor_Phone_Number__c = null,
ISPICKVAL(Undisclosed_Location__c ,&quot;&quot;),
AND(ISPICKVAL(Is_this_a_K_12_school__c,&quot;No&quot;),Street_Address_1__c = null),
AND(ISPICKVAL(Is_this_a_K_12_school__c,&quot;No&quot;),City__c = null),
AND(ISPICKVAL(Is_this_a_K_12_school__c,&quot;No&quot;),ISPICKVAL(State__c ,&quot;&quot;)),
AND(ISPICKVAL(Is_this_a_K_12_school__c,&quot;No&quot;),Zip__c = null),


AND(Projected_Start_Date__c = null,NOT(ISPICKVAL(Location_Type__c,&quot;Operating Site&quot;))),
AND(Projected_End_Date__c = null,NOT(ISPICKVAL(Location_Type__c,&quot;Operating Site&quot;))),
AND(ISPICKVAL(Site_Type__c ,&quot;&quot;),ISPICKVAL(Location_Type__c,&quot;Service Location&quot;)),
AND(ISPICKVAL(Station_Type__c ,&quot;&quot;),ISPICKVAL(Location_Type__c,&quot;Service Location&quot;)),
AND(ISPICKVAL(Lodging_Type__c, &quot;&quot;),ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;)),
AND(ISPICKVAL(Lodging_Category__c,&quot;&quot;),ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;)),
AND(Lodging_Description__c = null,ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;)),
AND(Lodging_Arrival_Date__c = null,ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;)),
AND(Lodging_Departure_Date__c = null,ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;)),
AND(Distance_to_Location_of_Service__c = null,ISPICKVAL(Location_Type__c,&quot;Member Lodging&quot;))))</errorConditionFormula>
        <errorMessage>Please enter Required fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Capacity_Building</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
INCLUDES( Capacity_Building__c , &apos;Other (Please specify in text box)&apos;), 
(ISBLANK( Other_Capacity_Building__c )))</errorConditionFormula>
        <errorDisplayField>Other_Capacity_Building__c</errorDisplayField>
        <errorMessage>Please enter a value for Other Capacity Building.</errorMessage>
    </validationRules>
</CustomObject>